22 Novenber 2016: Ralph
	- Make access-control-tag-data RDATA absolute. This makes the RDATA
	  origin consistent between local-data and access-control-tag-data.
	- Fix NSEC ENT wildcard check. Matching wildcard does not have to be a
	  subdomain of the NSEC owner.

22 November 2016: Wouter
	- iana portlist update.
	- Fix unit tests for DS hash processing for fake-dsa test option.

21 November 2016: Wouter
	- Fix #1158: reference RFC 8020 "NXDOMAIN: There Really Is Nothing
	  Underneath" for the harden-below-nxdomain option.

10 November 2016: Ralph
	- Fix #1155: test status code of unbound-control in 04-checkconf,
	  not the status code from the tee command.

4 November 2016: Ralph
	- Added stub-ssl-upstream and forward-ssl-upstream options.

4 November 2016: Wouter
	- configure detects ssl security level API function in the autoconf
	  manner.  Every function on its own, so that other libraries (eg.
	  LibreSSL) can develop their API without hindrance.
	- Fix #1154: segfault when reading config with duplicate zones.
	- Note that for harden-below-nxdomain the nxdomain must be secure,
	  this means nsec3 with optout is insufficient.

3 November 2016: Ralph
	- Set OpenSSL security level to 0 when using aNULL ciphers.

3 November 2016: Wouter
	- .gitattributes line for githubs code language display.
	- log-identity: config option to set sys log identity, patch from
	  "Robin H. Johnson" <robbat2@gentoo.org>

2 November 2016: Wouter
	- iana portlist update.

31 October 2016: Wouter
	- Fix failure to build on arm64 with no sbrk.
	- iana portlist update.

28 October 2016: Wouter
	- Patch for server.num.zero_ttl stats for count of expired replies,
	  from Pavel Odintsov.

26 October 2016: Wouter
	- Fix unit tests for openssl 1.1, with no DSA, by faking DSA, enabled
	  with the undocumented switch 'fake-dsa'.  It logs a warning.

25 October 2016: Wouter
	- Fix #1134: unbound-control set_option -- val-override-date: -1 works